UI Issues Fixed

--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -101,7 +101,10 @@
   "Reset Password":"Reset Password",
   "Login":"Login",
   "Cancel":"Cancel",
-
+  "Length of password must be between 8 and 60" : "Length of password must be between 8 and 60.",
+  "Length of username must be between 3 and 40" : "Length of username must be between 3 and 40.",
+  "Username may consist of a-z, 0-9, underscores, spaces and must begin with a letter" : "Username may consist of a-z, 0-9, underscores, spaces and must begin with a letter.",
+  
   "COMMENT_6": "/****************************** TRANSLATIONS FOR THE RESET PASSWORD PAGE IS GIVEN BELOW*********(Username,Password,Reset Password)***************************/",
 
   "Email":"Email",
@@ -132,7 +135,7 @@
   "Edit Conformance Questions":"Edit Conformance Questions",
   "Git Tag" : "Git Tag",
   "Git Commit" : "Git Commit",
-  "Update Survey Questions":"Update Survey Questions",
+  "Updated Questionnaire":"Updated Questionnaire",
   "Submission Status":"Submission Status",
   "Submitted Awaiting Approval":"Awaiting Approval",
   "Approve Selected":"Approve Selected",
@@ -145,21 +148,20 @@
   "User Name" : "User Name",
   "% Complete":"% Complete",
   "Score":"Score",
-  "Update Survey" : "Update Survey",
+  "Update Questionnaire" : "Update Questionnaire",
   "Summary" : "Summary",
   "Updates" : "Updates",
   "Added" : "Added",
   "Update" : "Update",
-  "Summary-history-update" : "survey version/languages will be updated", 
-  "Summary-history-add" : "survey version/languages will be added",
-  "no-update" :"No survey/versions were updated",
-  "no-new-add" : "No survey/versions were added",
+  "Summary-history-update" : "questionnaire version/languages will be updated", 
+  "Summary-history-add" : "questionnaire version/languages will be added",
+  "no-update" :"No questionnaire/versions were updated",
+  "no-new-add" : "No questionnaire/versions were added",
   "answered out of" : "answered out of",
   "Warning" : "Warning",
-  "survey-updated" : "survey version/languages were updated",
-  "survey-added" : "survey version/languages were added",
-  "survey-warning" : "with the following warnings",
-
+  "questionnaire-updated" : "questionnaire version/languages were updated",
+  "questionnaire-added" : "questionnaire version/languages were added",
+  "questionnaire-warning" : "with the following warnings",
   "Site Software Version" : "Site Software Version",
 
 
@@ -175,7 +177,7 @@
   "Select Version":"Select Version",
   "select_version_content":" Select the specification version.",
   "Version":"Version",
-  "reset_survey_content" : "This will delete all answers and start a new survey with the latest survey version.  Are you sure you want to continue?",
+  "reset_Questionnaire_content" : "This will delete all answers and start a new Questionnaire with the latest Questionnaire version.  Are you sure you want to continue?",
   "Yes" : "Yes",
   "No" : "No",
   "Save-ans-dialog" : "Saved Successful",
