--- a/WebContent/resources/locales/ru/translation.json
+++ b/WebContent/resources/locales/ru/translation.json
@@ -115,7 +115,10 @@
   "Sign Up_content_1":"Мое имя и адрес электронной почты могут быть опубликованы на странице соответствия веб-сайта OpenChain",
   "Sign Up_content_2":"Я согласен с Linux Foundation",
   "Sign Up_content_2_T&C" : "Условия эксплуатации",
-
+  "Length of password must be between 8 and 60" : "Длина пароля должна быть от 8 до 60.",
+  "Length of username must be between 3 and 40" : "Длина имени пользователя должна быть от 3 до 40.",
+  "Username may consist of a-z, 0-9, underscores, spaces and must begin with a letter": "Имя пользователя может состоять из a-z, 0-9, подчеркивания, пробела и должно начинаться с буквы.",
+  
   "COMMENT_8": "/****************************** TRANSLATIONS FOR THE UPDATE PROFILE PAGE IS GIVEN BELOW*********(Username,Password,Name,Re-enter Password,Organization,Email,Organization Postal Address,Sign Up_content_1)***************************/",
  
   "Update Profile":"Обновить профиль",
@@ -132,7 +135,7 @@
   "Edit Conformance Questions":"Редактировать вопросы соответствия",
   "Git Tag" : "День Git",
   "Git Commit" : "Git совершить",
-  "Update Survey Questions":"Обновить вопросы опроса",
+  "Updated Questionnaire":"Обновить вопросы опроса",
   "Submission Status":"Статус отправки",
   "Submitted Awaiting Approval":"В ожидании подтверждения",
   "Approve Selected":"Подтвердить выбранное",
@@ -145,7 +148,7 @@
   "User Name" : "Имя пользователя",
   "% Complete":"% полный",
   "Score":"Гол",
-  "Update Survey" : "Обновить опрос",
+  "Update Questionnaire" : "Обновить опрос",
   "Summary" : "Резюме",
   "Updates" : "Обновления",
   "Added" : "добавленной",
@@ -156,9 +159,9 @@
   "no-new-add" : "Нет опроса / версии были добавлены",
   "answered out of" : "ответил из",
   "Warning" : "Предупреждение",
-  "survey-updated" : "версия опроса / языки были обновлены",
-  "survey-added" : "версия опроса / языки были добавлены",
-  "survey-warning" : "со следующими предупреждениями",
+  "questionnaire-updated" : "версия опроса / языки были обновлены",
+  "questionnaire-added" : "версия опроса / языки были добавлены",
+  "questionnaire-warning" : "со следующими предупреждениями",
   "Site Software Version" : "Версия программного обеспечения сайта",
 
   "COMMENT_10": "/****************************** TRANSLATIONS FOR THE QUSETIONNAIRE PAGE IS GIVEN BELOW*********(title,Specification Version )***************************/",
@@ -173,7 +176,7 @@
   "Select Version":"Выберите версию",
   "select_version_content":" Выберите версию спецификации.",
   "Version":"Версия",
-  "reset_survey_content" : "Это удалит все ответы и начнет новый опрос с последней версией опроса. Вы уверены что хотите продолжить?",
+  "reset_Questionnaire_content" : "Это удалит все ответы и начнет новый опрос с последней версией опроса. Вы уверены что хотите продолжить?",
   "Yes" : "да",
   "No" : "нет",
   "Save-ans-dialog" : "Сохранено Успешно",
