Internationalization issues fixed

--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -11,7 +11,7 @@
 
   "title": "OpenChain Self Certification",
   "welcome": "Welcome",
-  "welcome_content": "The OpenChain Specification represents a core set of requirements a quality FOSS compliance program must satisfy. It fosters efficient and effective compliance of open source licenses across the supply chain. By self-certifying, participants are able to confirm they are in compliance with the Specification’s requirements.",
+  "welcome_content": "The OpenChain Specification represents a core set of requirements a quality FOSS compliance program must satisfy. It fosters efficient and effective compliance of open source licenses across the supply chain. By self-certifying, participants are able to confirm they are in compliance with the Specification's requirements.",
   "Getting Started": "Getting Started",
   "Getting Started_content": "Applicants confirm their understanding of the OpenChain Specification and the need to complete Self-Certification to become OpenChain Conformant. The Online Self-Certification requires you to:",
   "Getting Started_content_1": "Fulfill all requirements set forth in the ",
