Partial implementation of supporting language profiles in the front-end - issue #24
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -34,6 +34,7 @@
   "Admin":"Admin",
   "Account":"Account",
   "Update profile":"Update profile",
+  "Language":"Language",
   "Sign out":"Sign out",
 
   "English":"English (en)",
