--- a/WebContent/resources/locales/ru/translation.json
+++ b/WebContent/resources/locales/ru/translation.json
@@ -34,6 +34,7 @@
   "Admin":"Администратор",
   "Account":"учетная запись",
   "Update profile":"Обновить профиль",
+  "Language" : "язык",
   "Sign out":"выход",
 
   "English":"английский (en)",
