update questionnnaire and error dialog formatting fix

--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -165,7 +165,7 @@
   "questionnaire-added" : "questionnaire version/languages were added",
   "questionnaire-warning" : "with the following warnings",
   "Site Software Version" : "Site Software Version",
-
+  "update-warning" : "Select git version",
 
   "COMMENT_10": "/****************************** TRANSLATIONS FOR THE QUSETIONNAIRE PAGE IS GIVEN BELOW*********(title,Specification Version )***************************/",
 
