--- a/resources/messages_ru.properties
+++ b/resources/messages_ru.properties
@@ -104,7 +104,7 @@ Question.8=Invalid format for question number {0}.  Must be of the format N or N
 QuestionJsonDeserializer.10=Unknown question type: {0}
 # Strings from SurveyUpdateResult class
 SurveyUpdateResult.1=Version: {0}; Language: {1} {2}
-SurveyUpdateResult.2=Version: {0}; Language: {1)
+SurveyUpdateResult.2=Version: {0}; Language: {1}
 # Test values - used for testing the I18N functionality NOTE: THESE SHOULD NOT BE TRANSLATED
 test.key1=default key1
 test.key2=This is a template test1 with "7"
