Fix encoding issue for questionnaire json files
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -38,6 +38,7 @@ CertificationServlet.24=Can not reset password.  Check that the username and ema
 CertificationServlet.25=User is not logged in
 CertificationServlet.26=Invalid survey question update: {0}
 CertificationServlet.27=Unexpected error - missing file in Conformance Questionnaire GIT Repository.  Please notify the OpenChain team of this error.
+CertificationServlet.28=Unexpected error - unsupported encoding for a file in the Conformance Questionnaire GIT Repository.  Please notify the OpenChain team of this error.
 CertificationServlet.29=Must have admin privileges to upload a survey
 CertificationServlet.30=Invalid survey upload: {0}
 CertificationServlet.32=Must have admin privileges to set submission status
