--- a/WebContent/resources/locales/ja/translation.json
+++ b/WebContent/resources/locales/ja/translation.json
@@ -9,7 +9,7 @@
 
   "COMMENT_1": "\/****************************** TRANSLATIONS FOR THE INDEX PAGE IS GIVEN BELOW************************************\/",
 
-  "title": "OpenChain自己認証<\/b>",
+  "title": "OpenChain自己認証",
   "welcome": "ようこそ",
   "welcome_content": "OpenChain仕様は、FOSS品質コンプライアンス プログラムが満足すべき核となる要件を明確化した仕様を提示しています。サプライチェーン全体にわたってオープンソースライセンスのコンプライアンスを効率よく、効果的に達成します。自己認証を行うことで、仕様の用件に適合していることを確認できます。",
   "Getting Started": "はじめに",
